test/ui/test/name-resolution/duplicate-bindings.lushui
;;; TEST fail check

use extern.core.nat.Nat

data Alpha: Type of
    alpha (beta: Alpha): Alpha

Alpha: Type = Type

beta: Nat = 1000

module pod of
    use super.Nat

    data Nat: Type of
        zero: Nat
        successor: Nat -> Nat

beta (x: Nat) (y: Nat): Nat = y

pod: Nat = beta

data ALIKE: Type of
    ALIKE: ALIKE

zero: Nat = 0

use pod.zero
